--- a/config/userConfig.yml
+++ b/config/userConfig.yml
@@ -22,8 +22,6 @@ users:
       address: '江苏省南京市江宁区南京工程学院'
       # school 学校全称
       schoolName: '南京工程学院'
-      # phtoneNumber 联系方式
-      phtoneNumber: ''
       # 是否检查表单的标题（1代表检查，0代表不检查）
       checkTitle: 0
 
@@ -39,6 +37,11 @@ users:
       isNotice: true
       # email 接受通知消息的邮箱（qq邮箱）xxx@qq.com
       email: ''
+      # phtoneNumber 联系方式
+      phtoneNumber: ''
+      # 学生住宿信息
+      # {‘001’:'走读', '002':'东1', '012':'东11', '013':'北1', '022':'北10'}
+      StuAccommodationInfo: ''
 
       # 表单信息
       forms:
@@ -68,110 +71,5 @@ users:
             value: '001'
         - form:
             # {'001':'无', ...... '004': '境外'}
-            title: 中高风险地区行程史、密切接触史
-            value: '001'
-
-  - user:
-      # 任务类型（收集：0、签到：1、查寝：2、打卡：3）
-      type: 3
-      # username 学号或者工号
-      username: ''
-      # password 密码
-      password: ''
-      # address 地址，定位信息
-      address: '江苏省南京市江宁区南京工程学院'
-      # school 学校全称
-      schoolName: '南京工程学院'
-      # phtoneNumber 联系方式
-      phtoneNumber: ''
-      # 是否检查表单的标题（1代表检查，0代表不检查）
-      checkTitle: 0
-
-      # 姓名
-      name: ''
-      # 所在院
-      deptName: '计算机工程学院'
-      # 所在院编号
-      deptCode: '40070'
-      # 是否开启qq邮箱通知功能
-      isNoticeOpen: false
-      # 是否发送qq邮箱通知签到成功消息
-      isNotice: false
-      # email 接受通知消息的邮箱（qq邮箱）xxx@qq.com
-      email: ''
-
-      # 表单信息
-      forms:
-        - form:
-            title: 今日所在位置
-            value: '001'
-        - form:
-            title: 疫苗接种情况
-            value: '002'
-        - form:
-            title: 今日身体状况
-            value: '011'
-        - form:
-            title: 今日体温
-            value: '002'
-        - form:
-            title: 今日健康码
-            value: '001'
-        - form:
-            title: 今日隔离情况
-            value: '001'
-        - form:
-            title: 中高风险地区行程史、密切接触史
-            value: '001'
-  - user:
-      # 任务类型（收集：0、签到：1、查寝：2、打卡：3）
-      type: 3
-      # username 学号或者工号
-      username: ''
-      # password 密码
-      password: ''
-      # address 地址，定位信息
-      address: '江苏省南京市江宁区南京工程学院'
-      # school 学校全称
-      schoolName: '南京工程学院'
-      # phtoneNumber 联系方式
-      phtoneNumber: ''
-      # 是否检查表单的标题（1代表检查，0代表不检查）
-      checkTitle: 0
-
-      # 姓名
-      name: ''
-      # 所在院
-      deptName: '计算机工程学院'
-      # 所在院编号
-      deptCode: '40070'
-      # 是否开启qq邮箱通知功能
-      isNoticeOpen: false
-      # 是否发送qq邮箱通知签到成功消息
-      isNotice: false
-      # email 接受通知消息的邮箱（qq邮箱）xxx@qq.com
-      email: ''
-
-      # 表单信息
-      forms:
-        - form:
-            title: 今日所在位置
-            value: '001'
-        - form:
-            title: 疫苗接种情况
-            value: '002'
-        - form:
-            title: 今日身体状况
-            value: '011'
-        - form:
-            title: 今日体温
-            value: '002'
-        - form:
-            title: 今日健康码
-            value: '001'
-        - form:
-            title: 今日隔离情况
-            value: '001'
-        - form:
             title: 中高风险地区行程史、密切接触史
             value: '001'
